code/HADAD-base/src/main/java/hadad/base/compiler/model/sppj/SPPJQLParser.java
// Generated from SPPJQL.g4 by ANTLR 4.7.2

package hadad.base.compiler.model.sppj;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SPPJQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, FROM=9, 
		SELECT=10, WHERE=11, IN=12, MAP=13, KEYS=14, LIST=15, SET=16, MAIN=17, 
		JSONBUILDOBJECT=18, JSONARRAYELEMENTS=19, AS=20, AND=21, NAME=22, STRING=23, 
		INTEGER=24, WHITESPACE=25;
	public static final int
		RULE_sppjqlQuery = 0, RULE_viewName = 1, RULE_sppjQuery = 2, RULE_sppjRootFieldName = 3, 
		RULE_sppjSelectClause = 4, RULE_sppjSelectStatement = 5, RULE_sppjSelectItem = 6, 
		RULE_sppjRecordConstruct = 7, RULE_sppjFieldBinding = 8, RULE_sppjRecordConstructFieldName = 9, 
		RULE_sppjFieldValue = 10, RULE_sppjSelectVar = 11, RULE_sppjSelectConstant = 12, 
		RULE_sppjSelectQuery = 13, RULE_sppjFromWhereClause = 14, RULE_sppjFromClause = 15, 
		RULE_sppjBinding = 16, RULE_sppjFromClauseBindingSource = 17, RULE_sppjSource = 18, 
		RULE_sppjFromClauseBindingVar = 19, RULE_sppjWhereClause = 20, RULE_sppjCondition = 21, 
		RULE_sppjWhereCondEquality = 22, RULE_sppjWhereCondEqualityLeftTerm = 23, 
		RULE_sppjWhereCondEqualityRightTerm = 24, RULE_sppjCTerm = 25, RULE_sppjTerm = 26, 
		RULE_sppjTermVar = 27, RULE_sppjTermConstant = 28, RULE_sppjTermPath = 29, 
		RULE_sppjPath = 30, RULE_sppjPathVar = 31, RULE_sppjStep = 32, RULE_sppjObjStep = 33, 
		RULE_sppjVariable = 34, RULE_dataSetName = 35, RULE_key = 36, RULE_sppjFieldName = 37, 
		RULE_sppjConstant = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"sppjqlQuery", "viewName", "sppjQuery", "sppjRootFieldName", "sppjSelectClause", 
			"sppjSelectStatement", "sppjSelectItem", "sppjRecordConstruct", "sppjFieldBinding", 
			"sppjRecordConstructFieldName", "sppjFieldValue", "sppjSelectVar", "sppjSelectConstant", 
			"sppjSelectQuery", "sppjFromWhereClause", "sppjFromClause", "sppjBinding", 
			"sppjFromClauseBindingSource", "sppjSource", "sppjFromClauseBindingVar", 
			"sppjWhereClause", "sppjCondition", "sppjWhereCondEquality", "sppjWhereCondEqualityLeftTerm", 
			"sppjWhereCondEqualityRightTerm", "sppjCTerm", "sppjTerm", "sppjTermVar", 
			"sppjTermConstant", "sppjTermPath", "sppjPath", "sppjPathVar", "sppjStep", 
			"sppjObjStep", "sppjVariable", "dataSetName", "key", "sppjFieldName", 
			"sppjConstant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'{'", "':'", "'}'", "','", "'('", "')'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "FROM", "SELECT", 
			"WHERE", "IN", "MAP", "KEYS", "LIST", "SET", "MAIN", "JSONBUILDOBJECT", 
			"JSONARRAYELEMENTS", "AS", "AND", "NAME", "STRING", "INTEGER", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SPPJQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SPPJQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SppjqlQueryContext extends ParserRuleContext {
		public ViewNameContext viewName() {
			return getRuleContext(ViewNameContext.class,0);
		}
		public SppjQueryContext sppjQuery() {
			return getRuleContext(SppjQueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SPPJQLParser.EOF, 0); }
		public SppjRootFieldNameContext sppjRootFieldName() {
			return getRuleContext(SppjRootFieldNameContext.class,0);
		}
		public SppjqlQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjqlQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjqlQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjqlQuery(this);
		}
	}

	public final SppjqlQueryContext sppjqlQuery() throws RecognitionException {
		SppjqlQueryContext _localctx = new SppjqlQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sppjqlQuery);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				viewName();
				setState(79);
				match(T__0);
				setState(80);
				sppjQuery();
				setState(81);
				match(EOF);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(T__1);
				setState(84);
				sppjRootFieldName();
				setState(85);
				match(T__2);
				setState(86);
				sppjQuery();
				setState(87);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViewNameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SPPJQLParser.NAME, 0); }
		public ViewNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_viewName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterViewName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitViewName(this);
		}
	}

	public final ViewNameContext viewName() throws RecognitionException {
		ViewNameContext _localctx = new ViewNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_viewName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjQueryContext extends ParserRuleContext {
		public SppjFromWhereClauseContext sppjFromWhereClause() {
			return getRuleContext(SppjFromWhereClauseContext.class,0);
		}
		public SppjSelectClauseContext sppjSelectClause() {
			return getRuleContext(SppjSelectClauseContext.class,0);
		}
		public SppjQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjQuery(this);
		}
	}

	public final SppjQueryContext sppjQuery() throws RecognitionException {
		SppjQueryContext _localctx = new SppjQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sppjQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			sppjFromWhereClause();
			setState(94);
			sppjSelectClause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjRootFieldNameContext extends ParserRuleContext {
		public SppjFieldNameContext sppjFieldName() {
			return getRuleContext(SppjFieldNameContext.class,0);
		}
		public SppjRootFieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjRootFieldName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjRootFieldName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjRootFieldName(this);
		}
	}

	public final SppjRootFieldNameContext sppjRootFieldName() throws RecognitionException {
		SppjRootFieldNameContext _localctx = new SppjRootFieldNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sppjRootFieldName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			sppjFieldName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjSelectClauseContext extends ParserRuleContext {
		public SppjSelectStatementContext sppjSelectStatement() {
			return getRuleContext(SppjSelectStatementContext.class,0);
		}
		public SppjSelectClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjSelectClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjSelectClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjSelectClause(this);
		}
	}

	public final SppjSelectClauseContext sppjSelectClause() throws RecognitionException {
		SppjSelectClauseContext _localctx = new SppjSelectClauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sppjSelectClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			sppjSelectStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjSelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(SPPJQLParser.SELECT, 0); }
		public SppjSelectItemContext sppjSelectItem() {
			return getRuleContext(SppjSelectItemContext.class,0);
		}
		public SppjSelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjSelectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjSelectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjSelectStatement(this);
		}
	}

	public final SppjSelectStatementContext sppjSelectStatement() throws RecognitionException {
		SppjSelectStatementContext _localctx = new SppjSelectStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sppjSelectStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(SELECT);
			setState(101);
			sppjSelectItem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjSelectItemContext extends ParserRuleContext {
		public SppjRecordConstructContext sppjRecordConstruct() {
			return getRuleContext(SppjRecordConstructContext.class,0);
		}
		public SppjSelectVarContext sppjSelectVar() {
			return getRuleContext(SppjSelectVarContext.class,0);
		}
		public SppjSelectConstantContext sppjSelectConstant() {
			return getRuleContext(SppjSelectConstantContext.class,0);
		}
		public SppjSelectItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjSelectItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjSelectItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjSelectItem(this);
		}
	}

	public final SppjSelectItemContext sppjSelectItem() throws RecognitionException {
		SppjSelectItemContext _localctx = new SppjSelectItemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sppjSelectItem);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				sppjRecordConstruct();
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				sppjSelectVar();
				}
				break;
			case STRING:
			case INTEGER:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				sppjSelectConstant();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjRecordConstructContext extends ParserRuleContext {
		public List<SppjFieldBindingContext> sppjFieldBinding() {
			return getRuleContexts(SppjFieldBindingContext.class);
		}
		public SppjFieldBindingContext sppjFieldBinding(int i) {
			return getRuleContext(SppjFieldBindingContext.class,i);
		}
		public SppjRecordConstructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjRecordConstruct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjRecordConstruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjRecordConstruct(this);
		}
	}

	public final SppjRecordConstructContext sppjRecordConstruct() throws RecognitionException {
		SppjRecordConstructContext _localctx = new SppjRecordConstructContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sppjRecordConstruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__1);
			setState(109);
			sppjFieldBinding();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(110);
				match(T__4);
				setState(111);
				sppjFieldBinding();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjFieldBindingContext extends ParserRuleContext {
		public SppjRecordConstructFieldNameContext sppjRecordConstructFieldName() {
			return getRuleContext(SppjRecordConstructFieldNameContext.class,0);
		}
		public SppjFieldValueContext sppjFieldValue() {
			return getRuleContext(SppjFieldValueContext.class,0);
		}
		public SppjFieldBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjFieldBinding; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjFieldBinding(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjFieldBinding(this);
		}
	}

	public final SppjFieldBindingContext sppjFieldBinding() throws RecognitionException {
		SppjFieldBindingContext _localctx = new SppjFieldBindingContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sppjFieldBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			sppjRecordConstructFieldName();
			setState(120);
			match(T__2);
			setState(121);
			sppjFieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjRecordConstructFieldNameContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public SppjRecordConstructFieldNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjRecordConstructFieldName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjRecordConstructFieldName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjRecordConstructFieldName(this);
		}
	}

	public final SppjRecordConstructFieldNameContext sppjRecordConstructFieldName() throws RecognitionException {
		SppjRecordConstructFieldNameContext _localctx = new SppjRecordConstructFieldNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sppjRecordConstructFieldName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjFieldValueContext extends ParserRuleContext {
		public SppjRecordConstructContext sppjRecordConstruct() {
			return getRuleContext(SppjRecordConstructContext.class,0);
		}
		public SppjSelectVarContext sppjSelectVar() {
			return getRuleContext(SppjSelectVarContext.class,0);
		}
		public SppjSelectConstantContext sppjSelectConstant() {
			return getRuleContext(SppjSelectConstantContext.class,0);
		}
		public SppjSelectQueryContext sppjSelectQuery() {
			return getRuleContext(SppjSelectQueryContext.class,0);
		}
		public SppjFieldValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjFieldValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjFieldValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjFieldValue(this);
		}
	}

	public final SppjFieldValueContext sppjFieldValue() throws RecognitionException {
		SppjFieldValueContext _localctx = new SppjFieldValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sppjFieldValue);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				sppjRecordConstruct();
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				sppjSelectVar();
				}
				break;
			case STRING:
			case INTEGER:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				sppjSelectConstant();
				}
				break;
			case FROM:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				sppjSelectQuery();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjSelectVarContext extends ParserRuleContext {
		public SppjVariableContext sppjVariable() {
			return getRuleContext(SppjVariableContext.class,0);
		}
		public SppjSelectVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjSelectVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjSelectVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjSelectVar(this);
		}
	}

	public final SppjSelectVarContext sppjSelectVar() throws RecognitionException {
		SppjSelectVarContext _localctx = new SppjSelectVarContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sppjSelectVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			sppjVariable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjSelectConstantContext extends ParserRuleContext {
		public SppjConstantContext sppjConstant() {
			return getRuleContext(SppjConstantContext.class,0);
		}
		public SppjSelectConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjSelectConstant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjSelectConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjSelectConstant(this);
		}
	}

	public final SppjSelectConstantContext sppjSelectConstant() throws RecognitionException {
		SppjSelectConstantContext _localctx = new SppjSelectConstantContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_sppjSelectConstant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			sppjConstant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjSelectQueryContext extends ParserRuleContext {
		public SppjQueryContext sppjQuery() {
			return getRuleContext(SppjQueryContext.class,0);
		}
		public SppjSelectQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjSelectQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjSelectQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjSelectQuery(this);
		}
	}

	public final SppjSelectQueryContext sppjSelectQuery() throws RecognitionException {
		SppjSelectQueryContext _localctx = new SppjSelectQueryContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_sppjSelectQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			sppjQuery();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SppjFromWhereClauseContext extends ParserRuleContext {
		public SppjFromClauseContext sppjFromClause() {
			return getRuleContext(SppjFromClauseContext.class,0);
		}
		public SppjWhereClauseContext sppjWhereClause() {
			return getRuleContext(SppjWhereClauseContext.class,0);
		}
		public SppjFromWhereClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sppjFromWhereClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).enterSppjFromWhereClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPPJQLListener ) ((SPPJQLListener)listener).exitSppjFromWhereClause(this);
		}
	}

	public final SppjFromWhereClauseContext sppjFromWhereClause() throws RecognitionException {
		SppjFromWhereClauseContext _localctx = new SppjFromWhereClauseContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_sppjFromWhereClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			sppjFromClause();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(138);
				sppjWhereClause();
				}
			}
